--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-  <ul id="squares"></ul>
-  <ul id="circles"></ul>
+  <h3 id="average"></h3>
+  <ul id="freelancer"></ul>
+  <ul id="occupations"></ul>
+  <ul id="price"></ul>
   <script src="index.js"></script>
 </body>
