--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
+    <link href="index.css" rel="stylesheet" />
 </head>
 <body>
   <h3 id="average"></h3>
