occupations and prices added with clearInterval at 10 objects

--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
     <link href="index.css" rel="stylesheet" />
 </head>
 <body>
+  <h1 style="font-weight: bold;">Freelancer Forum</h1>
+  <h3 style="font-style: italic;">The average starting price is</h3>
   <h3 id="average"></h3>
-  <ul id="freelancer"></ul>
-  <ul id="occupations"></ul>
-  <ul id="price"></ul>
+  <h2>Available Freelancers</h2>
+  <table>
+    <tr>
+      <th>
+        <ul id="freelancer"></ul>
+      </th>
+      <th>
+        <ul id="occupations"></ul>
+      </th>
+      <th>
+        <ul id="price"></ul>
+      </th>
+    </tr>
+</table>
   <script src="index.js"></script>
 </body>
